--- a/Day1/Day1.csproj
+++ b/Day1/Day1.csproj
@@ -8,4 +8,8 @@
         <RootNamespace>AdventOfCode2024</RootNamespace>
     </PropertyGroup>
 
+    <ItemGroup>
+      <PackageReference Include="BenchmarkDotNet" Version="0.14.0" />
+    </ItemGroup>
+
 </Project>
